# pregame_dc

./: .env.example  .gitignore  README.md  pyproject.toml
data/: outcomes.parquet  volumes.parquet
data_collection/: discover_markets.py  fetch_outcomes.py  fetch_volumes.py  ws_logger.py
data_collection/self_collected/: build_dataset.py  filtering.py
data_collection/telonex/: build_dataset.py  fetch_metadata.py
deploy/: README.md  pregame-dc-bot.service
docs/: beta_matrix.md  beta_matrix_raw.md  beta_matrix_ridge.md  beta_matrix_top3_token_basis.md  beta_matrix_top5_token_basis.md  beta_token_x_pc.csv  beta_token_x_pc_raw.csv  beta_token_x_pc_ridge1.csv  beta_token_x_pc_ridge1000.csv  beta_token_x_token_top3.csv  beta_token_x_token_top5.csv  findings.md  polymarket_market_metadata.md
pregame_dc/: paths.py
pregame_dc/analyze/: backtest_full_overlap.py  backtest_replay_vs_live.py  backtest_subset_pnl.py  calibration_plots.py  calibration_plots_per_market.py  compare_betas.py  compare_live_vs_backtest.py  compare_per_cell_asks_sc_tx.py  cross_eval_best_of_dc.py  cross_eval_self_collected_clean.py  cross_eval_self_collected_dc.py  cross_eval_self_collected_multi_t.py  cross_eval_vanilla_vs_impute.py  diagnostic.py  edge_threshold_sweep.py  full_24vec_compare.py  full_overlap_xlsx.py  plot_moneyline_edge_fires.py  plot_winners_t-2.py
pregame_dc/discovery/: slots.py  soccer.py
pregame_dc/live/: bot.py  clob_v2.py  fit_save_dc.py  fit_save_model.py  fit_save_model_impute.py  resolve_outcomes.py
pregame_pca/: constants.py  paths.py
pregame_pca/live/: bot.py  (+3 more)
(+33 files in other folders)
