[project]
name = "pregame_pca"
version = "0.1.0"
description = "Rank-3 PCR pregame predictor + live Polymarket bot for soccer 12-market baskets"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "matplotlib",
    "tqdm",
    "requests",
    "websockets",
    "aiohttp",
    "python-dotenv",
    "py-clob-client",
    "py-order-utils",
    "poly-eip712-structs",
    "eth-utils",
    # Used by data_collection/ (raw-input → per_game_data step). Not needed
    # at inference time but bundled for self-containedness.
    "h5py",
    "httpx",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pregame_pca*", "data_collection*"]
